--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,5 +21,6 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="58083912c035206135aea30a9df62233cd1f2cf5" />
+        <activity android:name=".activities.ListCompositionActivity"></activity>
     </application>
 </manifest>
