--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
     compile 'com.codepath.libraries:android-oauth-handler:1.1.0'
+    compile 'com.google.android.gms:play-services-maps:9.8.0'
+    compile 'com.google.maps.android:android-maps-utils:0.4.2'
+    compile 'com.google.android.gms:play-services-location:9.8.0'
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:design:25.0.0'
