--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.doublesp.coherence">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".application.CoherenceApplication"
@@ -21,5 +22,6 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="58083912c035206135aea30a9df62233cd1f2cf5" />
+        <activity android:name=".activities.ListCompositionActivity"></activity>
     </application>
 </manifest>
