--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="58083912c035206135aea30a9df62233cd1f2cf5"/>
+            android:value="@string/fabric_api_key"/>
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_api_key"/>
