--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,28 +9,27 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:name=".application.CoherenceApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.ExploreActivity">
+            android:name=".application.CoherenceApplication"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
+        <activity android:name=".activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ListCompositionActivity">
-
-        </activity>
 
         <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="58083912c035206135aea30a9df62233cd1f2cf5"/>
+                android:name="io.fabric.ApiKey"
+                android:value="58083912c035206135aea30a9df62233cd1f2cf5"/>
         <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_api_key"/>
+                android:name="com.google.android.maps.v2.API_KEY"
+                android:value="@string/google_maps_api_key"/>
+
     </application>
+
 </manifest>
