--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,7 @@
             android:name=".activities.ExternalLinkActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:launchMode="singleTop"
-            android:theme="@android:style/Theme.Holo.NoActionBar">
+            android:launchMode="singleTop">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.VIEW"/>
 
