--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ apply plugin: 'me.tatarka.retrolambda'
 def dbflow_version = "3.1.1"
 
 dependencies {
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
@@ -87,7 +89,9 @@ dependencies {
     apt 'org.parceler:parceler:1.1.1'
     apt 'com.google.dagger:dagger-compiler:2.7'
     provided 'javax.annotation:jsr250-api:1.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.google.firebase:firebase-database:9.8.0'
+    compile 'com.firebaseui:firebase-ui:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
