Added notification when list shared with user. Added support for Batch for server push notification.

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://maven.fabric.io/public' }
+        maven { url 'http://maven.batch.com/release' }
+
     }
 }
 
