--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_api_key" />
 
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.MainActivity"
+                  android:screenOrientation="portrait">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,8 +50,10 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ShareActivity" />
-        <activity android:name=".activities.AddFriendActivity" />
+        <activity android:name=".activities.ShareActivity"
+                  android:screenOrientation="portrait"/>
+        <activity android:name=".activities.AddFriendActivity"
+                  android:screenOrientation="portrait"/>
 
         <service android:name="com.batch.android.BatchPushService" />
 
