--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_api_key"/>
+            android:value="GOOGLE_SERVICE_API_KEY"/>
 
         <activity
             android:name="com.pinyaoting.garcondecuisine.activities.MainActivity"
